--- a/Day8/NaverM.css
+++ b/Day8/NaverM.css
@@ -7,14 +7,105 @@
 	margin: 0px;
 	padding: 0px;
 }
-.logo{
-	height: 100px;
-	background-color: green;
+.head{
+	height: 153px;
+	background-color: #DCDCDC;
 }
-.menu{
-	height: 43px;
-	background-color: gray;
-}
+	.logo{
+		height: 100px;
+		background-color: #00C73C;
+	}
+		.search{
+			height: 100px;
+			text-align: center;
+		}
+		.searchinner{
+			height: 89px;
+			margin-top: -100px;
+		}
+		.searchinner>form{
+			height: 89px;
+			padding: 49px 15px 0px 15px;
+		}
+			.searchbox{
+				height: 40px;
+				background-color: #FFFFFF;
+				position: relative;
+			}
+				.searchinnerbox{
+					padding: 9px 125px 0px 10px;
+					height: 36px;
+				}
+				.searchinput{
+					width: 100%;
+					display: block;
+					border: 0px;
+					outline: 0px;
+					height: 27px;
+					line-height: 27px;
+					font-size: 17px;
+				}
+				.searchbuttons{
+					position: absolute;
+					top: 0px;
+					bottom: 0px;
+					right: 7px;
+				}
+					.searchbutton{
+						border: 0px;
+						outline: 0px;
+						background-color: #FFFFFF;
+						width: 38px;
+						height: 40px;
+						margin-left: 1px;
+						float: left;
+					}
+					.searchbutton>span{
+						display: inline-block;
+						background-image: url('https://s.pstatic.net/static/www/m/2018/sp_main_v181115a.png');
+						background-size: 655px 642px;
+						vertical-align: top;
+					}
+						.searchbuttonmic{
+							width: 20px;
+							height: 24px;
+							background-position: -572px -162px;
+						}
+						.searchbuttonphoto{
+							width: 23px;
+							height: 22px;
+							background-position: -543px -481px;
+						}
+						.searchbuttonwhere{
+							width: 18px;
+							height: 24px;
+							background-position: -599px -48px;
+						}
+			.hamburg{
+				width: 50px;
+				height: 48px;
+				display: inline-block;
+				vertical-align: top;
+				position: absolute;
+				top: 0px;
+				left: 0px;
+			}
+				.hamburgmenu{
+					display: block;
+					width: 22px;
+					height: 17px;
+					position: absolute;
+					top: 16px;
+					left: 14px;
+					background-position: -599px -275px;
+					background-image: url('https://s.pstatic.net/static/www/m/2018/sp_main_v181115a.png');
+					background-size: 655px 642px;
+				}
+	.menu{
+		height: 43px;
+		background-color: #FFFFFF;
+		vertical-align: top;
+	}
 .main::after{
 	clear: both;
 	content: "";
@@ -24,10 +115,16 @@
 	position: relative;
 }
 .main>div{
-	border: solid 1px black;
 	width: calc(100% / 3);
 	position: absolute;
+	background-color: #DCDCDC;
 }
+	.contents{
+		width: 100%;
+		margin-bottom : 10px;
+		height: calc(100% - 10px);
+		background-color: #FFFFFF;
+	}
 .realsearch{
 	height: 258px;
 }
