--- a/Day8/NaverM2.css
+++ b/Day8/NaverM2.css
@@ -10,6 +10,103 @@
 .top{
 	height: 143px;
 }
+	.search{
+		height: 100px;
+		background-color: #00C73C;
+	}
+		.logo{
+			height: 100px;
+			text-align: center;
+		}
+		.search-in{
+			height: 89px;
+			margin-top: -100px;
+		}
+		.search-in>form{
+			height: 89px;
+			padding: 49px 15px 0px 15px;
+		}
+			.search-box{
+				height: 40px;
+				background-color: #FFFFFF;
+				position: relative;
+			}
+				.search-inbox{
+					padding: 9px 125px 0px 10px;
+					height: 36px;
+				}
+				.search-input{
+					width: 100%;
+					display: block;
+					border: 0px;
+					outline: 0px;
+					height: 27px;
+					line-height: 27px;
+					font-size: 17px;
+				}
+				.btns{
+					position: absolute;
+					top: 0px;
+					right: 7px;
+					bottom: 0px;
+				}
+					.btn{
+						border: 0px;
+						outline: 0px;
+						background-color: #FFFFFF;
+						width: 38px;
+						height: 40px;
+						margin-left: 1px;
+						float: left;
+					}
+						.btn1,
+						.btn2,
+						.btn3{
+							display: inline-block;
+							background-image: url('https://s.pstatic.net/static/www/m/2018/sp_main_v181115a.png');
+							background-size: 655px 642px;
+						}
+						.btn1{
+							width: 20px;
+							height: 24px;
+							background-position: -572px -162px;
+							vertical-align: top;
+						}
+						.btn2{
+							width: 23px;
+							height: 22px;
+							background-position: -543px -481px;
+							vertical-align: top;
+						}
+						.btn3{
+							width: 18px;
+							height: 24px;
+							background-position: -599px -48px;
+					    vertical-align: top;
+						}
+			.ham-box{
+				width: 50px;
+				height: 48px;
+				display: inline-block;
+				vertical-align: top;
+				position: absolute;
+				top: 0px;
+				left: 0px;
+			}
+				.ham-menu{
+					display: block;
+					width: 22px;
+					height: 17px;
+					position: absolute;
+					top: 16px;
+					left: 14px;
+					background-position: -599px -275px;
+					background-image: url('https://s.pstatic.net/static/www/m/2018/sp_main_v181115a.png');
+    			background-size: 655px 642px;
+				}
+	.menu{
+		height: 43px;
+	}
 .bottom{
 	background-color: #DCDCDC;
 	padding-top: 10px;
@@ -57,4 +154,38 @@
 	height: 100px;
 	left: calc(100% / 3);
 	top: 181px;
+}
+@media (max-width: 1023px){
+	.contents{
+		width: calc(100% / 2);
+	}
+	#box4{
+		left: calc(100% / 2);
+		top: 75px;
+	}
+	#box2{
+		left: calc(100% / 2);
+	}
+	#box5{
+		top: 408px;
+		left: 0px;
+	}
+	#box7{
+		top: 405px;
+		left: calc(100% / 2);
+	}
+	#box3{
+		left: 0px;
+		top: 258px;
+	}
+	#box6{
+		top: 145px;
+		left: calc(100% / 2);
+	}
+}
+@media (max-width: 633px){
+	.contents{
+		width: calc(100%);
+		position: unset;
+	}
 }
