--- a/Day14/NaverBox.css
+++ b/Day14/NaverBox.css
@@ -535,12 +535,98 @@
 
 .popuprealsearchtop {
   padding: 16px 16px 0px;
-  height: 30px;
+  height: 46px;
   color: #000000;
   letter-spacing: -1px;
   font-weight: bold;
   font-size: 14px;
   line-height: 17px;
+}
+
+.popuprealmune {
+  width: 288px;
+  height: 30px;
+  padding: 0px 9px 6px 17px;
+}
+
+.popuprealmuneinner {
+  position: relative;
+  z-index: 1;
+  background: #FFFFFF;
+  color: #222222;
+  float: left;
+  margin-left: -1px;
+  padding-top: 5px;
+  width: 126px;
+  height: 17px;
+  border: 1px solid #C0C0C0;
+  background: #F9FAFC;
+  color: #888888;
+  vertical-align: top;
+  text-align: center;
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 14px;
+  height: 24px;
+}
+
+.popuprealmunebody {
+  display: none;
+}
+
+.popuprealmunebody>ul {
+  margin: 0 16px;
+  padding-bottom: 3px;
+  border-bottom: 1px solid #f1f3f6;
+}
+
+.popuprealmunebody li {
+  padding: 4px 0 0 21px;
+  height: 22px;
+  list-style: none;
+  position: relative;
+}
+
+.popuprealmunebody li>a {
+  text-decoration: none;
+}
+
+.popuplistnumber {
+  position: absolute;
+  top: 50%;
+  left: 0px;
+  margin-top: -10px;
+  min-width: 17px;
+  color: #000000;
+  vertical-align: top;
+  text-align: center;
+  font-size: 14px;
+  font-family: Arial, Sans-serif;
+  line-height: 18px;
+}
+
+.popuplisttext {
+  display: block;
+  overflow: hidden;
+  width: 193px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #000000;
+}
+
+.datawrapgraph {
+  position: absolute;
+  top: 0px;
+  right: -3px;
+  padding: 5px;
+}
+
+.datawrapgraphicon {
+  display: block;
+  width: 12px;
+  height: 10px;
+  background-position: -187px -52px;
+  background-image: url('https://s.pstatic.net/static/www/img/2018/sp_main_v181019.png');
 }
 
 #outerbody {
@@ -822,6 +908,10 @@
   background-image: url('https://s.pstatic.net/static/www/img/2018/sp_newscast_v180511.png');
 }
 
+.newslistmynews:hover {
+  color: #000000;
+}
+
 .newslisttail1 {
   background-position: -228px -124px;
 }
@@ -892,9 +982,9 @@
   width: 123px;
   height: 67px;
   float: left;
-  z-index: 0;
   padding: 21px 0px 22px;
   border-right: 1px solid #DCDCDC;
+  position: relative;
 }
 
 .api-list>li>a>img {
@@ -908,38 +998,81 @@
   display: block;
 }
 
+.api-list-popup {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 123px;
+  height: 67px;
+  padding: 18px 0px 19px;
+  border-right: 1px solid #DCDCDC;
+  background-color: #FFFFFF;
+  text-align: center;
+  z-index: -1;
+  font-size: 0px;
+}
+
+.api-list-popup>a {
+  margin-right: 0px;
+  display: inline-block;
+  border: 1px solid #DCDCDC;
+  color: #222222;
+  text-decoration: none;
+  letter-spacing: -1px;
+  padding: 7px 0px;
+  font-size: 12px;
+  line-height: 14px;
+  height: 30px;
+}
+
+.api-list-popup>a:hover {
+  border: 1px solid #BEC8D8;
+}
+
+.api-list-popup-fsub {
+  width: 36px;
+}
+
+.api-list-popup-lsub {
+  width: 59px;
+}
+
+.api-list-popup-zindex {
+  z-index: 7;
+}
+
 
 /* .toppenals{
-								position: absolute;
-								top: 0px;
-								left: 0px;
-								clear: both;
-								content: "";
-						}
-								.panelsteps{
-										display: block;
-										float: left;
-										align-content: center;
-										text-align: center;
-										padding: 21px 0px 22px;
-										width: 123px;
-										height: 66px;
-										border-right: 1px solid #DCDCDC;
-								}
-						.middlepanels{
-								position: absolute;
-								top: 67px;
-								left: 0px;
-								clear: both;
-								content: "";
-						}
-						.bottompanels{
-								position: absolute;
-								bottom: 1px;
-								left: 0px;
-								clear: both;
-								content: "";
-						}*/
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	clear: both;
+	content: "";
+}
+.panelsteps{
+	display: block;
+	float: left;
+	align-content: center;
+	text-align: center;
+	padding: 21px 0px 22px;
+	width: 123px;
+	height: 66px;
+	border-right: 1px solid #DCDCDC;
+}
+.middlepanels{
+	position: absolute;
+	top: 67px;
+	left: 0px;
+	clear: both;
+	content: "";
+}
+.bottompanels{
+	position: absolute;
+	bottom: 1px;
+	left: 0px;
+	clear: both;
+	content: "";
+}*/
 
 .panelbordertop,
 .panelborderbottom {
@@ -1095,7 +1228,12 @@
   line-height: 16px;
 }
 
+.timesquareheadinner {
+  display: inline-block;
+}
+
 .hi_tail {
+  display: none;
   max-width: 130px;
   color: #888888;
   font-weight: 400;
@@ -1188,8 +1326,73 @@
   height: 106px;
 }
 
-.pleasesecret {
+.timesquareinner {
+  display: none;
+}
+
+.weather {
+  position: relative;
   display: block;
+  padding-left: 20px;
+  height: 106px;
+  text-decoration: none;
+  text-align: left;
+}
+
+.weatherinfo {
+  position: relative;
+  display: block;
+  padding-top: 10px;
+  text-decoration: none;
+  height: 66px;
+  zoom: 1;
+}
+
+.weatherbreaking {
+  display: block;
+  margin-top: 8px;
+  height: 15px;
+  width: 290px;
+}
+
+.weatherbreaking>a {
+  text-decoration: none;
+}
+
+.weatherb1 {
+  margin-right: 3px;
+  color: #2565d0;
+  line-height: 15px;
+}
+
+.weatherb2 {
+  display: inline-block;
+  overflow: hidden;
+  max-width: 180px;
+  color: #222;
+  vertical-align: top;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.weatherb3 {
+  color: #888;
+  vertical-align: top;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.weatherbar {
+  margin: 0px 5px 0px 4px;
+  color: #DCDCDC;
+  vertical-align: 0;
+  font-style: normal;
+  font-size: 12px;
+}
+
+.pleasesecret {
   padding: 22px 15px 18px;
   text-decoration: none;
 }
@@ -1229,4 +1432,8 @@
 .popuprealsearch:hover,
 .displayblock {
   display: block;
+}
+
+.displaynone {
+  display: none;
 }
